Prevent FileWindow and DownloadWindow from being dragged off screen (fixes issue of unwanted scrolling); Window dragHandler extracted to separate windowControllerHelper.js;

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
     height: 100%;
     width: 100%;
 	background-image:url(../images/dark_pattern.png);
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 body:hover
